<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/gradient"
    tools:context=".CreateAccountActivity">

    <ProgressBar
        android:id="@+id/acct_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/acct_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_account"
            android:hint="@string/Username_hint"
            android:maxLines="1"
            android:paddingBottom="16dp"
            />

        <AutoCompleteTextView
            android:id="@+id/email_acct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/password_acct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:maxLines="1"
            android:minHeight="48dp" />



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_account_button"
            android:text="@string/create_account_text"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="16dp"
            />


    </LinearLayout>



</LinearLayout>